--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -42,13 +42,9 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
         <Button
-            android:id="@+id/prev_button"
-            android:text="@string/prev_button"
+            android:id="@+id/cheat_button"
+            android:text="@string/cheat_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -58,7 +54,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-    </LinearLayout>
 
 
 
